Fix overlapping issue with Account Book

--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,7 @@
 }
 
 /* Fixed previous and next buttons  */
+
 .pagination-fixed {
   position: fixed;
   bottom: 0;
@@ -96,11 +97,13 @@
   right: 0;
   background: #fff;
   padding: 10px 0;
+  margin-top: 50px;
   z-index: 20;
   border-top: 1px solid #e0e0e0;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 1000px;
   gap: 8px;
 }
 
